added navbar with styling

--- a/index.html
+++ b/index.html
@@ -11,28 +11,32 @@
     <!-- Google Fonts Link -->
     <link href="https://fonts.googleapis.com/css?family=Fugaz+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
     <!--  MDC icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <!-- custom css -->
-    <link rel="stylesheet" href="./public/assets/css/index.css" />
-    <link rel="stylesheet" href="./public/assets/css/popups.css" />
-    <link rel="stylesheet" href="./public/assets/css/tabs.css">
-    <link rel="stylesheet" href="./public/assets/css/buttons.css">
+    <link rel="stylesheet" href="./public/assets/css/index.css"/>
+    <link rel="stylesheet" href="./public/assets/css/popups.css"/>
+    <link rel="stylesheet" href="./public/assets/css/tabs.css"/>
+    <link rel="stylesheet" href="./public/assets/css/buttons.css"/>
+    <link rel="stylesheet" href="./public/assets/css/nav.css"/>
   </head>
   <body>
     <!-- NavBar -->
     <nav>
-      <h3>
-        Recipedia
-      </h3>
-
-      <div class="mask"></div>
-
-      <button id="sign-in-button" class="waves-effect waves-light">
-        <i class="large material-icons">person</i>
-      </button>
+      <h3>Recipedia</h3>
+      <div class="divider">
+        <img src="Public/assets/images/green-chilli.png" alt=""/>
+        <div class="divider-bottom"></div>
+        <div class="divider-top"></div>
+      </div>
+      <div class="coloured-section">
+        <button id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3">
+          <i class="tiny material-icons">person</i>
+        </button>
+      </div>
     </nav>
 
     <main>
@@ -124,17 +128,17 @@
 
     </main>
 
-    <footer class="page-footer">
+    <footer class="footer">
 
-      <button>
+      <button class="footer-button">
         <i class="material-icons">format_list_bulleted</i>
       </button>
 
-      <button>
+      <button class="footer-button">
         <i class="material-icons">favorite</i>
       </button>
 
-      <button>
+      <button class="footer-button">
         <i class="material-icons">dashboard</i>
       </button>
 
