updated nav, scales safely

--- a/index.html
+++ b/index.html
@@ -27,15 +27,18 @@
     <!-- NavBar -->
     <nav>
       <h3>Recipedia</h3>
-      <div class="divider">
-        <img src="Public/assets/images/green-chilli.png" alt=""/>
-        <div class="divider-bottom"></div>
-        <div class="divider-top"></div>
-      </div>
-      <div class="coloured-section">
-        <button id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3">
-          <i class="tiny material-icons">person</i>
-        </button>
+      <div class="divider-container">
+        <div class="divider">
+          <img src="Public/assets/images/green-chilli.png" alt=""/>
+          <div class="divider-bottom"></div>
+          <div class="divider-top"></div>
+          <div class="divider-filler"></div>
+        </div>
+        <div class="coloured-section">
+          <button id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3">
+            <i class="tiny material-icons">person</i>
+          </button>
+        </div>
       </div>
     </nav>
 
