--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
           <div class="divider-top"></div>
           <div class="divider-filler"></div>
         </div>
-        <div class="coloured-section">
-          <button id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3">
-            <i class="tiny material-icons">person</i>
-          </button>
-        </div>
+        <button id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3">
+          <i class="tiny material-icons">person</i>
+        </button>
       </div>
     </nav>
 
     <main>
+    
       <div class="container">
-        <p class="Welcome">Welcome to Recepedia</p>
-        <p class="Explore">Explore the world's recipes in a click... feeling hungry?</p>
+
+        <p class="Welcome">Explore, create and inspire</p>
+
         <!--Main Body Container w/Grids-->
         <div class="row">
             <div class="col s12">
@@ -57,7 +57,7 @@
                     <a class="a-tab-left"href="#search-bar" class="class text-darken-4">Recipe Search</a>
                   </li>
                   <li class="tab col s6">
-                    <a class="a-tab-right" href="#fridge-search" class="class text-darken-4">What's in my fridge</a>
+                    <a class="a-tab-right" href="#fridge-search" class="class text-darken-4">In the fridge?</a>
                   </li>
                 </ul>
 
@@ -107,7 +107,7 @@
                     <li>
                       How many of those items you can be bothered typing in.
                     </li>
-                    <div class="fridge-input-wrapper card blue-grey darken-1">
+                    <div class="fridge-input-wrapper">
                         <div class="chips"></div>
                     </div>
                   </ul>
@@ -133,20 +133,18 @@
 
     <footer class="footer">
 
-      <button class="footer-button">
-        <i class="material-icons">format_list_bulleted</i>
-      </button>
-
-      <button class="footer-button">
-        <i class="material-icons">favorite</i>
-      </button>
-
-      <button class="footer-button">
-        <i class="material-icons">dashboard</i>
-      </button>
-
-      <div>
-        Made with zest by  Reuben, Nick, Sam, Ken and Vasavi
+      <div class="button-container">
+        <button class="footer-button btn-floating">
+          <i class="material-icons">format_list_bulleted</i>
+        </button>
+  
+        <button class="footer-button btn-floating">
+          <i class="material-icons">favorite</i>
+        </button>
+  
+        <button class="footer-button btn-floating">
+          <i class="material-icons">dashboard</i>
+        </button>
       </div>
 
     </footer>
