added nav bar, footer and start template for DOW card

--- a/Public/index.html
+++ b/Public/index.html
@@ -34,8 +34,8 @@
           <div class="divider-top"></div>
           <div class="divider-filler"></div>
         </div>
-        <button id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3">
-          <i class="tiny material-icons">person</i>
+        <button id="sign-in-button" class="btn-floating waves-effect waves-light">
+          <i class="medium material-icons">account_circle</i>
         </button>
       </div>
     </nav>
