--- a/Public/index.html
+++ b/Public/index.html
@@ -17,11 +17,11 @@
     <!--  MDC icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <!-- custom css -->
-    <link rel="stylesheet" href="./public/assets/css/index.css"/>
-    <link rel="stylesheet" href="./public/assets/css/popups.css"/>
-    <link rel="stylesheet" href="./public/assets/css/tabs.css"/>
-    <link rel="stylesheet" href="./public/assets/css/buttons.css"/>
-    <link rel="stylesheet" href="./public/assets/css/nav.css"/>
+    <link rel="stylesheet" href="./assets/css/index.css"/>
+    <link rel="stylesheet" href="./assets/css/popups.css"/>
+    <link rel="stylesheet" href="./assets/css/tabs.css"/>
+    <link rel="stylesheet" href="./assets/css/buttons.css"/>
+    <link rel="stylesheet" href="./assets/css/nav.css"/>
   </head>
   <body>
     <!-- NavBar -->
@@ -29,7 +29,7 @@
       <h3>Recipedia</h3>
       <div class="divider-container">
         <div class="divider">
-          <img src="Public/assets/images/green-chilli.png" alt=""/>
+          <img src="./assets/images/green-chilli.png" alt=""/>
           <div class="divider-bottom"></div>
           <div class="divider-top"></div>
           <div class="divider-filler"></div>
