added server and added login pages

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!--  MDC icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <!-- custom css -->
-    <link rel="stylesheet" href="./public/assets/css/index.css"/>
-    <link rel="stylesheet" href="./public/assets/css/popups.css"/>
-    <link rel="stylesheet" href="./public/assets/css/tabs.css"/>
-    <link rel="stylesheet" href="./public/assets/css/buttons.css"/>
-    <link rel="stylesheet" href="./public/assets/css/nav.css"/>
+    <link rel="stylesheet" href="./assets/css/index.css"/>
+    <link rel="stylesheet" href="./assets/css/popups.css"/>
+    <link rel="stylesheet" href="./assets/css/tabs.css"/>
+    <link rel="stylesheet" href="./assets/css/buttons.css"/>
+    <link rel="stylesheet" href="./assets/css/nav.css"/>
   </head>
   <body>
     <!-- NavBar -->
@@ -29,15 +29,16 @@
       <h3>Recipedia</h3>
       <div class="divider-container">
         <div class="divider">
-          <img src="Public/assets/images/green-chilli.png" alt=""/>
+          <img src="./assets/images/green-chilli.png" alt=""/>
           <div class="divider-bottom"></div>
           <div class="divider-top"></div>
           <div class="divider-filler"></div>
         </div>
         <div class="coloured-section">
-          <button id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3">
-            <i class="tiny material-icons">person</i>
-          </button>
+          <a href="/signup.html">
+            <button id="sign-in-button"  class="btn-floating waves-effect waves-light z-depth-3">
+              <i class="tiny material-icons">person</i>
+            </a>
         </div>
       </div>
     </nav>
@@ -156,7 +157,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- custom js -->
-    <script src="./public/assets/javascript/activateTabs.js"></script>   
+    <script src="./assets/javascript/activateTabs.js"></script>   
 </body>
 
 </html>
