--- a/Public/dashboard.html
+++ b/Public/dashboard.html
@@ -48,13 +48,13 @@
                 <div class="dow-cards">
                     <div class="breakfast mobile-layout">
                         <h6 class="meal-type">Breakfast</h6>
-                        <div class="recipe-card"><i class="material-icons add-btn">add_circle_outline</i></div>
+                        <div class="recipe-card"></div>
                         <p class="mobile-name">cereal</p><span class="bullet-point"></span>
                     </div>
                     <div class="lunch mobile-layout">
                         <h6 class="meal-type">Lunch</h6>
-                        <div class="recipe-card"></div>
-                        <p class="mobile-name">-</p><span class="bullet-point"></span>
+                        <div class="recipe-card"><i class="material-icons add-btn">add_circle_outline</i></div>
+                        <p class="mobile-name">add a recipe</p><span class="bullet-point"></span>
                     </div>
                     <div class="dinner mobile-layout">
                         <h6 class="meal-type">Dinner</h6>
