fixed index.html merge conflict

--- a/Public/dashboard.html
+++ b/Public/dashboard.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" href="./assets/css/tabs.css"/>
     <link rel="stylesheet" href="./assets/css/buttons.css"/>
     <link rel="stylesheet" href="./assets/css/nav.css"/>
-    <link rel="stylesheet" href="./assets/css/dashboard/dashboard.css"/>
+    <link rel="stylesheet" href="./assets/css/dashboard/mobile.css"/>
+    <link rel="stylesheet" href="./assets/css/dashboard/desktop.css"/>
 </head>
 
 <body>
@@ -42,8 +43,8 @@
         <!--  -->
     <main>
         <div class="container">
-
-            <div class="Monday dow z-depth-2">
+            <h4>The Weekly Plan...</h4>
+            <div class="Monday dow z-depth-5">
                 <h5 class="dow-title">Monday</h5>
                 <div class="dow-cards">
                     <div class="breakfast mobile-layout">
@@ -64,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="Tuesday dow z-depth-2">
+            <div class="Tuesday dow z-depth-5">
                 <h5 class="dow-title">Tuesday</h5>
                 <div class="dow-cards">
                     <div class="breakfast mobile-layout">
@@ -85,7 +86,7 @@
                 </div>
             </div>
 
-            <div class="Wednesday dow z-depth-2">
+            <div class="Wednesday dow z-depth-5">
                 <h5 class="dow-title">Wednesday</h5>
                 <div class="dow-cards">
                     <div class="breakfast mobile-layout">
@@ -106,7 +107,7 @@
                 </div>
             </div>
 
-            <div class="Thursday dow z-depth-2">
+            <div class="Thursday dow z-depth-5">
                 <h5 class="dow-title">Thursday</h5>
                 <div class="dow-cards">
                     <div class="breakfast mobile-layout">
@@ -127,7 +128,7 @@
                 </div>
             </div>
 
-            <div class="Friday dow z-depth-2">
+            <div class="Friday dow z-depth-5">
                 <h5 class="dow-title">Friday</h5>
                 <div class="dow-cards">
                     <div class="breakfast mobile-layout">
@@ -148,7 +149,7 @@
                 </div>
             </div>
 
-            <div class="Satruday dow z-depth-2">
+            <div class="Satruday dow z-depth-5">
                 <h5 class="dow-title">Satruday</h5>
                 <div class="dow-cards">
                     <div class="breakfast mobile-layout">
@@ -169,7 +170,7 @@
                 </div>
             </div>
 
-            <div class="Sunday dow z-depth-2">
+            <div class="Sunday dow z-depth-5">
                 <h5 class="dow-title">Sunday</h5>
                 <div class="dow-cards">
                     <div class="breakfast mobile-layout">
@@ -210,5 +211,11 @@
         </div>
   
       </footer>
+
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- custom js -->
   <script src="./assets/javascript/dashboard-logic.js"></script>
 </body>
