server working and sending index.html

--- a/Public/index.html
+++ b/Public/index.html
@@ -123,7 +123,9 @@
           <!--This is where the cards will be displayed sequentially-->
           <div class="col s12">
                 <!--This is where the search results are displayed-->
-                <div id="search-results"></div>
+                <div id="search-results">
+                  
+                </div>
                 <button class="btn waves-effect">Show more Results</button>
           </div>
           
