--- a/Public/recipe.html
+++ b/Public/recipe.html
@@ -6,10 +6,10 @@
     <title>Recipedia</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./Public/assets/css/modal.css">
-    <link rel="stylesheet" href="./Public/assets/css/recipe-modal/visual-info.css">
-    <link rel="stylesheet" href="./Public/assets/css/recipe-modal/recipe.css">
-    <link rel="stylesheet" href="./Public/assets/css/buttons.css">
+    <link rel="stylesheet" href="./assets/css/modal.css">
+    <link rel="stylesheet" href="./assets/css/recipe-modal/visual-info.css">
+    <link rel="stylesheet" href="./assets/css/recipe-modal/recipe.css">
+    <link rel="stylesheet" href="./assets/css/buttons.css">
 
 </head>
 <body>
@@ -112,7 +112,7 @@
     
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="./public/assets/javascript/renderTimeBar.js"></script>
+    <script src="./assets/javascript/renderTimeBar.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
