changed css for nav.css

--- a/Public/dashboard.html
+++ b/Public/dashboard.html
@@ -20,8 +20,10 @@
     <link rel="stylesheet" href="./assets/css/tabs.css"/>
     <link rel="stylesheet" href="./assets/css/buttons.css"/>
     <link rel="stylesheet" href="./assets/css/nav.css"/>
+    <link rel="stylesheet" href="./assets/css/dashboard/main.css"/>
     <link rel="stylesheet" href="./assets/css/dashboard/mobile.css"/>
     <link rel="stylesheet" href="./assets/css/dashboard/desktop.css"/>
+    
 </head>
 
 <body>
