--- a/Public/index.html
+++ b/Public/index.html
@@ -19,7 +19,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="./assets/css/index.css"/> 
     <link rel="stylesheet" href="./assets/css/tabs.css"/> 
-    <link rel="stylesheet" href="./assets/css/buttons.css"/> 
+    <link rel="stylesheet" href="./assets/css/delete-button.css"/> 
     <link rel="stylesheet" href="./assets/css/nav.css"/> 
   </head> 
   <body>
@@ -27,18 +27,20 @@
     <nav>
       <h3>Recipedia</h3>
       <div class="divider-container">
+
         <div class="divider">
           <img src="./assets/images/green-chilli.png" alt=""/>
           <div class="divider-bottom"></div>
           <div class="divider-top"></div>
           <div class="divider-filler"></div>
         </div>
+
         <div class="coloured-section">
-          <a href="/signup.html">
-            <button id="sign-in-button"  class="btn-floating waves-effect waves-light z-depth-3">
-              <i class="tiny material-icons">person</i>
-            </a>
+          <a id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3" href="/signup.html">
+            <i class="tiny material-icons">person</i>
+          </a>
         </div>
+
       </div>
     </nav>
 
@@ -152,6 +154,7 @@
         <a class="footer-button btn-floating" href="/dashboard">
           <i class="material-icons">dashboard</i>
         </a>
+
       </div>
 
     </footer>
